# ENSIMA

./: .gitignore  LICENSE  Makefile  README.md  files.md  pyproject.toml  run.sh
artifacts/JIMS/: README.md  instructions.md  plot_results.ipynb
artifacts/JIMS/CSV/: DataSets-AIandML.csv  DataSets-AIandML_expert.csv
artifacts/JIMS/MLVGP/SeatShell_1/: SeatShell.json  SeatShell_wrongenergy.json
artifacts/JIMS/MLVGP/SeatShell_1/SeatShell_20251104_123337/: SeatShell_intermediate_results.txt
artifacts/JIMS/MLVGP/SeatShell_1/SeatShell_20251106_085804/: summary.txt
artifacts/JIMS/MLVGP/SeatShell_1/SeatShell_20251108_125945/: summary.txt
artifacts/JIMS/MLVGP/SeatShell_168/SeatShell_20251028_190616/: summary.txt
artifacts/JIMS/MLVGP/SeatShell_168/SeatShell_20251029_191256/: summary.txt
artifacts/JIMS/MLVGP/SeatShell_168/SeatShell_20251030_013947/: SeatShell_intermediate_results.txt
artifacts/JIMS/MLVGP/SeatShell_168_highestpeak_added/: SeatShell.json
artifacts/JIMS/MLVGP/SeatShell_168_highestpeak_added/SeatShell_20251030_080830/: summary.txt
artifacts/JIMS/MLVGP/SeatShell_168_highestpeak_added/SeatShell_20251031_094053/: SeatShell_intermediate_results.txt
artifacts/JIMS/MOE/DACH-VWS/: DACH-VWS.json
artifacts/JIMS/MOE/DACH-VWS/DACH-VWS_20251023_091501/: summary.txt
artifacts/JIMS/MOE/DACH-VWS_withpredicted/: DACH-VWS.json
artifacts/JIMS/MOE/Laengstraeger_softLimits/: Laengstraeger_02.json
artifacts/JIMS/TCO-Benchmark/PartType_01_Flat/: ASaeule-Session_01.ofs  ASaeule.inf  ASaeule.t51  ASaeule.t53  ASaeule.tim
artifacts/JIMS/TCO-Benchmark/PartType_02_Beam/: BSaeule_DX56D-Session_01.ofs  BSaeule_DX56D.t51
artifacts/JIMS/TCO-Benchmark/PartType_03_Deep/: RadhausAdapter-Session_01.ofs  RadhausAdapter.t51
artifacts/JIMS/TCO-Benchmark/PartType_04/: Einleger-Session.ofs  Einleger.t51  Einleger.t52
artifacts/JIMS/TCO-Benchmark/T52-PartFiles/: A-Pilar.t52  B-Pilar.t52  CrossBeam.t52  FrontFender_A.t52  FrontFender_B.t52  TailGate.t52  TankCapInsert.t52  Wheelhouse.t52  WheelhouseAdapter.t52
artifacts/JIMS/no_optimization/: DACH-VWS_no_optimization_expert_only.json  Laengstraeger_02_no_optimization.json  SeatShell_no_optimization_expert_only.json
artifacts/JIMS/no_optimization/DACH-VWS_20251107_110726_no_optimization/: summary.txt
artifacts/JIMS/no_optimization/Laengstraeger_02_20251106_165632/: Laengstraeger_02_intermediate_results.txt  summary.txt
artifacts/JIMS/no_optimization/SeatShell_20251106_175218/: summary.txt
artifacts/JIMS/no_optimization/SeatShell_20251111_095028/: SeatShell_intermediate_results.txt  summary.txt
artifacts/JIMS/no_optimization/SeatShell_20251111_111311/: SeatShell_intermediate_results.txt  summary.txt
artifacts/JIMS/sim_results/MOE/: DataSets-AIandML_labeled.csv
artifacts/JIMS/sim_results/no_optimization/: DACH-VWS_no_optimization.json  Laengstraeger_02_no_optimization_expert_only.json  SeatShell_no_optimization.json
artifacts/JIMS/simulation/: run_mlvgp.py  run_moe.py  run_no_optimization.py
doc/: README.md  architecture.md  contributing.md  design.md  installation.md  usage.md
ensima/: __main__.py  optimize.py
ensima/classes/: bayesian_optimization.py  execute.py  expert.py  file_modifier.py  geometry_nn.py  license_server.py  mixture_of_experts.py  model.py  print.py  progress_watcher.py  search_space.py  simulation.py
ensima/helpers/: adjust_args_cluster.py  co2.py  complexity.py  misc.py  objective_function.py  pareto.py  parse_args.py  parse_results.py  read_data.py  read_geometry.py  units.py
ensima_optimize/: __init__.py  __main__.py  optimize.py
ensima_optimize/classes/: acquisition_function.py  bayesian_optimization.py  execute.py  expert.py  file_modifier.py  gp_bracket_model.pkl  gp_casing_model.pkl  gp_gear_model.pkl  gp_shaft_model.pkl  license_server.py  logger.py  mixture_of_experts.py  model.py  progress_watcher.py  search_space.py  simulation.py
ensima_optimize/helpers/: adjust_args_cluster.py  clustering.py  complexity.py  energy.py  misc.py  optimum.py  parse_args.py  parse_results.py  plot.py  read_data.py  read_geometry.py  serilaize.py
examples/: example_detailed_training.py  example_expert.py  example_filtered_optimization_cluster.py  example_moe_optimization.py  example_optimization.py  example_plot.py  example_train.py  example_train_subset.py
test/: Makefile  dummy.json  test_csv_parser.py  test_license.py  test_moe.py  test_optimization.py  test_pareto.py  test_progress.py  test_sample_space.py
test/csv/: ASaeule-Results_01.csv  BSaeule_DX56D-Results_01.csv  DataSets-AIandML_20250401.csv  DataSets-AIandML_Asaeule.csv  DataSets-AIandML_expert.csv  DataSets-AIandML_labeled.csv  DataSets.csv  Results-CylindricalCup_23-05-02.csv
tools/: Import-CSV.c  Makefile  original_Import-CSV.c  plot_results.ipynb  plot_results.py  test.ipynb
(+78 files in other folders)
