[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = { }

[project]
name = "ensima"
dynamic = ["version"]
description = "High-performance computing package for Ensima project"
authors = [{ name = "Ahmad Tarraf", email = "ahmad.tarraf@tu-darmstadt.de" }]
maintainers = [
    { name = "Ahmad Tarraf", email = "ahmad.tarraf@tu-darmstadt.de" },
]
license = { file = "LICENSE" }
readme = "README.md"
keywords = ["high-performance computing", "ensima", "optimization"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "matplotlib",
    "numpy",
    "pandas",
    "rich",
    "scikit-learn",
    "scipy",
    "setuptools",
    "psutil",
    "pytest",
    "seaborn",
    "gpytorch",
    "sns",
    "torch"
]

[project.optional-dependencies]
optional-libs = [
    "ruff",
    "black",
    "isort",
    "nbstripout",
    "colorlog",
    "numba",
    "pynvml"
]

[project.urls]
Homepage = "https://git-ce.rwth-aachen.de/ensima/ensima-code/-/tree/master/optimization?ref_type=heads"
Documentation = "https://git-ce.rwth-aachen.de/ensima/ensima-code/-/blob/master/optimization/README.md?ref_type=heads"
# "Bug Tracker" = "https://github.com/tuda-parallel/FTIO/issues"
# Changelog = "https://github.com/tuda-parallel/FTIO/blob/master/CHANGELOG.md"



[project.scripts]
ensima = "ensima.optimize:main"

[tool.pytest.ini_options]
log_cli = true
log_cli_level = "INFO"
log_cli_format = "%(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)"
log_cli_date_format = "%Y-%m-%d %H:%M:%S"

[tool.setuptools.dynamic]
version = { attr = "ensima.__version__" }
readme = { file = ["README.md"] }


[tool.ruff]
line-length = 90
target-version = "py311"
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    ".venv",
    "env",
    "*.egg-info",
    "presentation_results",
    "logs",
    "tmp",
    "paper",
    "Laengstraeger_02_*",
]

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
    "SIM", # flake8-simplify
]
ignore = [
    "E501", # line too long (handled by formatter)
    "E203", # whitespace before ':' (Black compatibility)
    "B008", # do not perform function calls in argument defaults
    "SIM108", # Use ternary operator (can reduce readability)

    # ==========================================================================
    # TODO: The following errors should be fixed manually and then removed
    # from this ignore list. They are temporarily ignored to pass CI checks.
    # ==========================================================================

    # Import issues
    "F403", # undefined-local-with-import-star: `from module import *` used
    "F405", # undefined-local-with-import-star-usage: name may be undefined from star import

    # Exception handling
    "E722", # bare-except: do not use bare `except:`, specify exception type

    # Code style improvements
    "UP031", # printf-string-formatting: use f-strings instead of % formatting
    "SIM102", # collapsible-if: use single `if` instead of nested `if` statements
    "SIM113", # enumerate-for-loop: use `enumerate()` for index variable in `for` loop
    "SIM115", # open-file-with-context-handler: use context manager for `open()`
    "SIM101", # duplicate-isinstance-call: merge `isinstance()` calls
    "SIM116", # if-else-block-instead-of-dict-lookup: use dict lookup instead of if-else

    # Variable issues
    "F821", # undefined-name: undefined variable name
    "F811", # redefined-while-unused: redefinition of unused variable
    "B007", # unused-loop-control-variable: loop variable not used in body
    "E741", # ambiguous-variable-name: ambiguous variable name (e.g., l, O, I)
    "E402", # module-import-not-at-top-of-file: import not at top of file
    "B905", # zip() without an explicit strict= parameter (Python 3.10+)
]

[tool.ruff.lint.isort]
known-first-party = ["ensima"]
